--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,129 +1,344 @@
-.container {
-  padding: 0 2rem;
+.body {
+  /* background-image: linear-gradient(45deg, #96e6a1 0%, #ffffff 100%); */
+  background-color: #FC3C74;
 }
-
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+/* SECTION 1 */
+.section1 {
+  height: 550px;
+  margin: 1rem 0 0 0;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-flow: row wrap;
+  justify-content: flex-end;
   align-items: center;
+  z-index: 1;
 }
-
-.footer {
+.section1:before {
+  content: "";
+  width: 100%;
+  height: 550px;
+  position: absolute;
+  background: linear-gradient(90deg,rgba(0, 0, 0, 0),rgb(255, 255, 255)55%);
+  z-index: 1;
+}
+.imageS1 {
+  z-index: 0;
+}
+.text1_a1_s1 {
+  color: rgb(0, 0, 0);
+  width: 50%;
+  margin-right: 3rem;
+  text-align: center;
+  position: absolute;
   display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
+  flex-flow: column wrap;
+  align-items: flex-end;
+  gap: 0.5rem;
+  z-index: 1;
 }
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
+.text1_a1_s1 h1 {
   font-size: 4rem;
 }
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
+.text1_a1_s1 p {
   font-size: 1.5rem;
 }
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
+/* From uiverse.io */
+.text1_a1_s1 a {
+  padding: 1.3em 3em;
+  font-size: 12px;
   text-decoration: none;
-  border: 1px solid #eaeaea;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #fff;
+  background-color: #FC3C74;
+  border: none;
   border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  box-shadow: 0px 8px 15px rgba(252, 60, 116, 0.3);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+}
+.text1_a1_s1 a:hover {
+  background-color: #000;
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+}
+.text1_a1_s1 a:active {
+  transform: translateY(-1px);
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+/* SECTION 2 */
+.section2 {
+  width: 100%;
+  margin: 3rem 0;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 3rem;
+}
+.section2 h1 {
+  width: 90%;
+  margin: 2rem 0;
+  text-align: center;
+  font-size: 3rem;
+}
+/* SECTION 2 - ARTICLE 1 */
+.article1_s2 {
+  padding: 1rem;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  flex-basis: 90%;
+  gap: 5rem;
+}
+.text1_a1_s2 {
+  flex-basis: 400px;
+  text-align: end;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: flex-end;
+  gap: 0.5rem;
+}
+.text1_a1_s2 h2 {
+  color: rgb(0, 0, 0);
+  font-size: xxx-large;
+}
+.text1_a1_s2 p {
+  font-size: large;
+}
+/* From uiverse.io by @satyamchaudharydev */
+.button_a1s2 {
+  text-decoration: none;
+  --primary-color: #000;
+  --secondary-color: #fff;
+  --hover-color: #111;
+  --arrow-width: 10px;
+  --arrow-stroke: 2px;
+  box-sizing: border-box;
+  border: 0;
+  border-radius: 10px;
+  color: var(--secondary-color);
+  padding: 0.8em 1.8em;
+  background: var(--primary-color);
+  display: flex;
+  transition: 0.2s background;
+  align-items: center;
+  gap: 0.6em;
+  font-weight: bold;
 }
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+.arrowWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+.arrow {
+  margin-top: 1px;
+  width: var(--arrow-width);
+  background: var(--primary-color);
+  height: var(--arrow-stroke);
+  position: relative;
+  transition: 0.2s;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.arrow::before {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  border: solid var(--secondary-color);
+  border-width: 0 var(--arrow-stroke) var(--arrow-stroke) 0;
+  display: inline-block;
+  top: -3px;
+  right: 3px;
+  transition: 0.2s;
+  padding: 3px;
+  transform: rotate(-45deg);
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.button_a1s2:hover {
+  background-color: var(--primary-color);
+  color: #fff;
 }
 
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
-  }
-  .code {
-    background: #111;
-  }
-  .logo img {
-    filter: invert(1);
-  }
+.button_a1s2:hover .arrow {
+  background: var(--secondary-color);
+}
+
+.button_a1s2:hover .arrow:before {
+  right: 0;
+}
+.imageA1S2 {
+  border-radius: 1rem;
+}
+/* SECTION 2 - ARTICLE 2 */
+.article2_s2 {
+  padding: 1rem;
+  display: flex;
+  flex-flow: row-reverse wrap;
+  justify-content: center;
+  align-items: center;
+  flex-basis: 90%;
+  gap: 5rem;
+}
+.text1_a2_s2 {
+  flex-basis: 400px;
+  text-align: start;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: flex-start;
+  gap: 0.5rem;
+}
+.text1_a2_s2 h2 {
+  color: rgb(0, 0, 0);
+  font-size: xxx-large;
+}
+.text1_a2_s2 p {
+  font-size: large;
+}
+/* From uiverse.io by @satyamchaudharydev */
+.button_a2s2 {
+  text-decoration: none;
+  --primary-color: #000;
+  --secondary-color: #fff;
+  --hover-color: #111;
+  --arrow-width: 10px;
+  --arrow-stroke: 2px;
+  box-sizing: border-box;
+  border: 0;
+  border-radius: 10px;
+  color: var(--secondary-color);
+  padding: 0.8em 1.8em;
+  background: var(--primary-color);
+  display: flex;
+  transition: 0.2s background;
+  align-items: center;
+  gap: 0.6em;
+  font-weight: bold;
+}
+
+.arrowWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.arrow {
+  margin-top: 1px;
+  width: var(--arrow-width);
+  background: var(--primary-color);
+  height: var(--arrow-stroke);
+  position: relative;
+  transition: 0.2s;
+}
+
+.arrow::before {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  border: solid var(--secondary-color);
+  border-width: 0 var(--arrow-stroke) var(--arrow-stroke) 0;
+  display: inline-block;
+  top: -3px;
+  right: 3px;
+  transition: 0.2s;
+  padding: 3px;
+  transform: rotate(-45deg);
+}
+
+.button_a2s2:hover {
+  background-color: var(--primary-color);
+  color: #fff;
+}
+
+.button_a2s2:hover .arrow {
+  background: var(--secondary-color);
+}
+
+.button_a2s2:hover .arrow:before {
+  right: 0;
+}
+.imageA2S2 {
+  border-radius: 1rem;
+}
+
+/* SECTION 3 */
+.section3 {
+  margin-top: 5rem;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+}
+.backgroundS3 {
+  z-index: 0;
+}
+/* SECTION 3 - ARTICLE 1 */
+.text1_a1_s3 {
+  color: aliceblue;
+  width: 450px;
+  margin-top: 5rem;
+  text-align: end;
+  position: absolute;
+  right: 7rem;
+  z-index: 1;
+}
+.text1_a1_s3 h1 {
+}
+.text1_a1_s3 p {
+  font-size: larger;
+}
+/* SECTION 3 - ARTICLE 2 */
+.text1_a2_s3 {
+  color: aliceblue;
+  width: 450px;
+  margin-top: 25rem;
+  text-align: end;
+  position: absolute;
+  right: 7rem;
+  z-index: 1;
+}
+.text1_a2_s3 h1 {
+}
+.text1_a2_s3 p {
+  font-size: larger;
+}
+
+/* SECTION 4 */
+.section4 {
+  color: #fff;
+  padding: 5rem 0;
+  text-align: center;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+}
+.s4_item1 {
+  flex-basis: 300px;
+  display: flex;
+  flex-flow: column wrap;
+}
+.s4_item1 i {
+  margin-bottom: 1rem;
+  font-size: 3rem;
+}
+.s4_item2 {
+  flex-basis: 300px;
+  display: flex;
+  flex-flow: column wrap;
+}
+.s4_item2 i {
+  margin-bottom: 1rem;
+  font-size: 3rem;
+}
+.s4_item3 {
+  flex-basis: 300px;
+  display: flex;
+  flex-flow: column wrap;
+}
+.s4_item3 i {
+  margin-bottom: 1rem;
+  font-size: 3rem;
 }
