--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -35,6 +35,9 @@
   }
   
   /* From uiverse.io by @adamgiebl */
+  .buttontest {
+    text-decoration: none;
+  }
   .buttonS1 {
     font-family: inherit;
     font-size: 20px;
