--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -4,10 +4,10 @@
     justify-content: flex-end;
   }
   .container {
-    width: 1150px;
+    width: 100%;
     display: flex;
     flex-flow: row-reverse wrap;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
   }
   .logo {
