--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -69,3 +69,9 @@
     margin-right: 0.5rem;
     font-size: 1.2rem;
   }
+
+  @media only screen and (max-width: 412px) {
+    .navbar {
+      display: none;
+    }
+  }
