--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -174,6 +174,7 @@
 .imageA1S2 {
   border-radius: 1rem;
 }
+
 /* SECTION 2 - ARTICLE 2 */
 .article2_s2 {
   padding: 1rem;
@@ -346,4 +347,20 @@
 .s4_item3 i {
   margin-bottom: 1rem;
   font-size: 3rem;
+}
+
+@media only screen and (max-width: 450px) {
+  .article1_s2 {
+    width: 80%;
+  }
+  .article2_s2 {
+    width: 80%;
+  }
+
+  /* .imageA1S2 {
+    width: 95%;
+  }
+  .imageA2S2 {
+    width: 95%;
+  } */
 }
