--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -79,6 +79,7 @@
   gap: 3rem;
 }
 .section2 h1 {
+  color: #000;
   width: 90%;
   margin: 2rem 0;
   text-align: center;
@@ -352,15 +353,18 @@
 @media only screen and (max-width: 450px) {
   .article1_s2 {
     width: 80%;
+    gap: 1rem;
   }
   .article2_s2 {
     width: 80%;
+    gap: 1rem;
   }
-
-  /* .imageA1S2 {
-    width: 95%;
+  .text1_a1_s3 {
+    width: 340px;
+    right: 2rem;
   }
-  .imageA2S2 {
-    width: 95%;
-  } */
+  .text1_a2_s3 {
+    width: 340px;
+    right: 2rem;
+  }
 }
