--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -71,6 +71,9 @@
   }
 
   @media only screen and (max-width: 500px) {
+    .container {
+      gap: 1rem;
+    }
     .navbar {
       display: none;
     }
