--- a/styles/Burger.module.css
+++ b/styles/Burger.module.css
@@ -17,7 +17,7 @@
   }
   .menu__btn {
     position: fixed;
-    top: 20px;
+    top: 35px;
     left: 20px;
     width: 26px;
     height: 26px;
@@ -31,7 +31,7 @@
     position: absolute;
     width: 100%;
     height: 2px;
-    background-color: #616161;
+    background-color: #000;
     transition-duration: .25s;
   }
   .menu__btn > span::before {
@@ -68,9 +68,12 @@
     transition-duration: .25s;
   }
   .menu__item:hover {
-    background-color: #CFD8DC;
+    background-color: #FC3C74;
+    color: #fff;
   }
-
+  .logo {
+    margin: 0 0 1rem 5.5rem;
+  }
   @media only screen and (min-width: 499px) {
     .menu {
       display: none;
