--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -32,6 +32,7 @@
     font-size: large;
   }
   .imageA1S1 {
+    width: 100%;
     border-radius: 0.5rem;
   }
   /* SECTION 1 - ARTICLE 2 */
@@ -56,6 +57,7 @@
     font-size: large;
   }
   .imageA2S1 {
+    width: 100%;
     border-radius: 0.5rem;
   }
   
@@ -78,6 +80,7 @@
     z-index: 1;
   }
   .backgroundS2 {
+    width: 100%;
     z-index: 0;
     /* transform: rotate(270deg); */
   }
@@ -134,7 +137,6 @@
     margin: 6rem 8rem 4rem 8rem;
   }
   .s4_title {
-    width: 50%;
   }
   .s4_container {
     margin-top: 3rem;
@@ -168,11 +170,12 @@
   
   /* SECTION 5 */
   .section5 {
-    margin: 5rem 0 0 0;
+    padding-top: 5rem;
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
     align-items: center;
+    border-top: 1px solid #ccccccaf;
   }
   .s5_text {
     color: #fff;
@@ -188,4 +191,55 @@
     gap: 2rem;
   }
   .client {
+  }
+
+  @media only screen and (max-width: 450px) {
+    .section2 {
+      width: 100%;
+      color: #fff;
+      height: 800px;
+      margin: 0rem 0;
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: center;
+      align-items: center;
+    }
+    .section2:before {
+      content: "";
+      width: 100%;
+      height: 800px;
+      position: absolute;
+      background: linear-gradient(90deg,rgba(0, 0, 0, 0.4),rgba(0, 0, 0, 0.4));
+      z-index: 1;
+    }
+    .text1_a1_s2 {
+      width: 80%;
+      text-align: center;
+      position: absolute;
+      top: 86rem;
+      left: 2.5rem;
+      display: flex;
+      flex-flow: column wrap;
+      gap: 0.5rem;
+      z-index: 1;
+    }
+    .text1_a2_s2 {
+      width: 80%;
+      text-align: center;
+      position: absolute;
+      top: 110rem;
+      left: 2.5rem;
+      display: flex;
+      flex-flow: column wrap;
+      gap: 0.5rem;
+      z-index: 1;
+    }
+    .backgroundS2 {
+      width: 100%;
+      height: 800px;
+    }
+    .section4 {
+      color: #fff;
+      margin: 6rem 2rem;
+    }
   }
