--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -145,9 +145,35 @@
     display: flex;
   }
   
-  @media only screen and (max-width: 414px){
+  @media only screen and (max-width: 450px){
+    .imageS1 {
+      width: 90%;
+      height: 100%;
+      margin-top: 2rem;
+    }
+    .text_s1 {
+      width: 80%;
+    }
+    .text_s1 h1 {
+      font-size: 3rem;
+    }
     .map {
       width: 80%;
       height: 400px;
+    }
+    .section3 {
+      height: 100%;
+    }
+    .imageS3 {
+      width: 80%;
+      height: 90%;
+      margin-top: 7rem;
+    }
+    .contact_form {
+      margin-top: 2rem;
+      flex-basis: 550px;
+      padding: 1.5em;
+      border-radius: 25px;
+      display: flex;
     }
    }
