--- a/styles/ProductListView.module.css
+++ b/styles/ProductListView.module.css
@@ -78,3 +78,11 @@
     transform: translateY(-1px);
   } */
   
+  @media only screen and (max-width: 450px) {
+    .card {
+      width: 100%;
+    }
+    .image {
+      width: 100%;
+    }
+  }
