--- a/styles/Products.module.css
+++ b/styles/Products.module.css
@@ -37,3 +37,9 @@
   .cart2 {
     display: none;
   }
+
+  @media only screen and (max-width: 450px) {
+    .productList {
+      width: 75%;
+    }
+  }
