--- a/styles/Form.module.css
+++ b/styles/Form.module.css
@@ -4,7 +4,7 @@
     flex-flow: row wrap;
     justify-content: space-between;
     flex-basis: 100%;
-    gap: 1.5rem;
+    gap: 1rem;
     --primary-color: #fff;
     --secondary-color: rgb(156, 156, 156);
     --backlabel-color: #fc3c74;
@@ -12,8 +12,9 @@
   .titleForm {
     width: 100%;
   }
-  .titleForm h2 {
+  .titleForm h3 {
     color: #fff;
+    font-size: 2rem;
     margin-bottom: 1rem;
     text-align: start;
   }
@@ -25,7 +26,6 @@
     background: none;
     color: rgb(0, 0, 0);
     width: 100%;
-    padding: 0.7em;
     border: none;
     outline: 0;
     border-bottom: 1px solid #fff;
