--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,5 @@
 .body {
-  /* background-image: linear-gradient(45deg, #96e6a1 0%, #ffffff 100%); */
-  background-color: #FC3C74;
+   background-image: linear-gradient(45deg, #acacac 0%, #ffffff 100%);
 }
 /* SECTION 1 */
 .section1 {
@@ -8,7 +7,7 @@
   margin: 1rem 0 0 0;
   display: flex;
   flex-flow: row wrap;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   z-index: 1;
 }
@@ -17,22 +16,27 @@
   width: 100%;
   height: 550px;
   position: absolute;
-  background: linear-gradient(90deg,rgba(0, 0, 0, 0),rgb(255, 255, 255)55%);
+  background-image: radial-gradient(
+    circle,
+    rgba(0, 0, 0, 0.726) 35%,
+    rgba(0, 0, 0, 0) 100%
+  );
   z-index: 1;
 }
 .imageS1 {
   z-index: 0;
 }
 .text1_a1_s1 {
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   width: 50%;
-  margin-right: 3rem;
+  margin-top: 8rem;
   text-align: center;
   position: absolute;
   display: flex;
   flex-flow: column wrap;
-  align-items: flex-end;
-  gap: 0.5rem;
+  align-items: center;
+  justify-content: center;
+  gap: 10rem;
   z-index: 1;
 }
 .text1_a1_s1 h1 {
@@ -40,7 +44,28 @@
 }
 .text1_a1_s1 p {
   font-size: 1.5rem;
+  display: block;
+  font-family: monospace;
+  white-space: nowrap;
+  border-right: 4px solid;
+  width: 49ch;
+
+  animation: typing 2s steps(12), blink 0.5s infinite step-end alternate;
+  overflow: hidden;
 }
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+}
+
+@keyframes blink {
+  50% {
+    border-color: transparent;
+  }
+}
+
 /* From uiverse.io */
 .text1_a1_s1 a {
   padding: 1.3em 3em;
@@ -49,19 +74,19 @@
   text-transform: uppercase;
   letter-spacing: 2.5px;
   font-weight: 500;
-  color: #fff;
-  background-color: #FC3C74;
+  color: #000;
+  background-color: #fff;
   border: none;
   border-radius: 10px;
-  box-shadow: 0px 8px 15px rgba(252, 60, 116, 0.3);
+  box-shadow: 0px 8px 15px rgba(255, 255, 255, 0.116);
   transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
 }
 .text1_a1_s1 a:hover {
-  background-color: #000;
-  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.4);
-  color: #fff;
+  background-color: #fff;
+  box-shadow: 0px 15px 20px rgba(255, 255, 255, 0.116);
+  color: #000;
   transform: translateY(-7px);
 }
 .text1_a1_s1 a:active {
@@ -71,283 +96,77 @@
 /* SECTION 2 */
 .section2 {
   width: 100%;
-  margin: 3rem 0;
+  padding: 8rem 0 8rem 0;
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
-  gap: 3rem;
 }
-.section2 h1 {
+
+.texto {
   color: #000;
-  width: 90%;
-  margin: 2rem 0;
-  text-align: center;
-  font-size: 3rem;
-}
-/* SECTION 2 - ARTICLE 1 */
-.article1_s2 {
-  padding: 1rem;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  align-items: center;
-  flex-basis: 90%;
-  gap: 5rem;
-}
-.text1_a1_s2 {
-  flex-basis: 400px;
-  text-align: end;
+  width: 45rem;
   display: flex;
   flex-flow: column wrap;
-  align-items: flex-end;
-  gap: 0.5rem;
-}
-.text1_a1_s2 h2 {
-  color: rgb(0, 0, 0);
-  font-size: xxx-large;
-}
-.text1_a1_s2 p {
-  font-size: large;
-}
-/* From uiverse.io by @satyamchaudharydev */
-.button_a1s2 {
-  text-decoration: none;
-  --primary-color: #000;
-  --secondary-color: #fff;
-  --hover-color: #111;
-  --arrow-width: 10px;
-  --arrow-stroke: 2px;
-  box-sizing: border-box;
-  border: 0;
-  border-radius: 10px;
-  color: var(--secondary-color);
-  padding: 0.8em 1.8em;
-  background: var(--primary-color);
-  display: flex;
-  transition: 0.2s background;
-  align-items: center;
-  gap: 0.6em;
-  font-weight: bold;
+  justify-content: space-around;
+  align-items: start;
+  gap: 2rem;
 }
 
-.arrowWrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.arrow {
-  margin-top: 1px;
-  width: var(--arrow-width);
-  background: var(--primary-color);
-  height: var(--arrow-stroke);
-  position: relative;
-  transition: 0.2s;
-}
-
-.arrow::before {
-  content: "";
-  box-sizing: border-box;
-  position: absolute;
-  border: solid var(--secondary-color);
-  border-width: 0 var(--arrow-stroke) var(--arrow-stroke) 0;
-  display: inline-block;
-  top: -3px;
-  right: 3px;
-  transition: 0.2s;
-  padding: 3px;
-  transform: rotate(-45deg);
-}
-
-.button_a1s2:hover {
-  background-color: var(--primary-color);
-  color: #fff;
-}
-
-.button_a1s2:hover .arrow {
-  background: var(--secondary-color);
-}
-
-.button_a1s2:hover .arrow:before {
-  right: 0;
-}
-.imageA1S2 {
-  border-radius: 1rem;
-}
-
-/* SECTION 2 - ARTICLE 2 */
-.article2_s2 {
-  padding: 1rem;
-  display: flex;
-  flex-flow: row-reverse wrap;
-  justify-content: center;
-  align-items: center;
-  flex-basis: 90%;
-  gap: 5rem;
-}
-.text1_a2_s2 {
-  flex-basis: 400px;
-  text-align: start;
-  display: flex;
-  flex-flow: column wrap;
-  align-items: flex-start;
-  gap: 0.5rem;
-}
-.text1_a2_s2 h2 {
-  color: rgb(0, 0, 0);
-  font-size: xxx-large;
-}
-.text1_a2_s2 p {
-  font-size: large;
-}
-/* From uiverse.io by @satyamchaudharydev */
-.button_a2s2 {
-  text-decoration: none;
-  --primary-color: #000;
-  --secondary-color: #fff;
-  --hover-color: #111;
-  --arrow-width: 10px;
-  --arrow-stroke: 2px;
-  box-sizing: border-box;
-  border: 0;
-  border-radius: 10px;
-  color: var(--secondary-color);
-  padding: 0.8em 1.8em;
-  background: var(--primary-color);
-  display: flex;
-  transition: 0.2s background;
-  align-items: center;
-  gap: 0.6em;
-  font-weight: bold;
-}
-
-.arrowWrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.arrow {
-  margin-top: 1px;
-  width: var(--arrow-width);
-  background: var(--primary-color);
-  height: var(--arrow-stroke);
-  position: relative;
-  transition: 0.2s;
-}
-
-.arrow::before {
-  content: "";
-  box-sizing: border-box;
-  position: absolute;
-  border: solid var(--secondary-color);
-  border-width: 0 var(--arrow-stroke) var(--arrow-stroke) 0;
-  display: inline-block;
-  top: -3px;
-  right: 3px;
-  transition: 0.2s;
-  padding: 3px;
-  transform: rotate(-45deg);
-}
-
-.button_a2s2:hover {
-  background-color: var(--primary-color);
-  color: #fff;
-}
-
-.button_a2s2:hover .arrow {
-  background: var(--secondary-color);
-}
-
-.button_a2s2:hover .arrow:before {
-  right: 0;
-}
-.imageA2S2 {
-  border-radius: 1rem;
-}
-
-.buttontest {
-  text-decoration: none;
+.texto h2 {
+  font-size: 4rem;
 }
 
 /* SECTION 3 */
 .section3 {
-  margin-top: 5rem;
+  height: 550px;
+  margin: 1rem 0 0 0;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+}
+.section3:before {
+  content: "";
+  width: 100%;
+  height: 550px;
+  position: absolute;
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0) 10%,
+    rgba(0, 0, 0, 0.6) 68%
+  );
+  /*background-image: radial-gradient(
+    circle,
+    rgba(0, 0, 0, 0.726) 35%,
+    rgba(0, 0, 0, 0) 100%
+  );*/
+  z-index: 1;
+}
+.imageS3 {
+  z-index: 0;
+}
+.text1_a1_s3 {
+  width: 100%;
+  height: 86%;
+  margin-left: 2rem;
+  margin-bottom: 8rem;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  position: absolute;
   display: flex;
   flex-flow: row wrap;
   justify-content: flex-start;
-}
-.backgroundS3 {
-  width: 100%;
-  z-index: 0;
-}
-/* SECTION 3 - ARTICLE 1 */
-.text1_a1_s3 {
-  color: aliceblue;
-  width: 450px;
-  margin-top: 5rem;
-  text-align: end;
-  position: absolute;
-  right: 7rem;
+  align-items: flex-end;
   z-index: 1;
 }
 .text1_a1_s3 h1 {
+  font-size: 4rem;
 }
 .text1_a1_s3 p {
-  font-size: larger;
-}
-/* SECTION 3 - ARTICLE 2 */
-.text1_a2_s3 {
-  color: aliceblue;
-  width: 450px;
-  margin-top: 25rem;
-  text-align: end;
-  position: absolute;
-  right: 7rem;
-  z-index: 1;
-}
-.text1_a2_s3 h1 {
-}
-.text1_a2_s3 p {
-  font-size: larger;
-}
-
-/* SECTION 4 */
-.section4 {
-  color: #fff;
-  padding: 5rem 0;
-  text-align: center;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-evenly;
-}
-.s4_item1 {
-  flex-basis: 300px;
-  display: flex;
-  flex-flow: column wrap;
-}
-.s4_item1 i {
-  margin-bottom: 1rem;
-  font-size: 3rem;
-}
-.s4_item2 {
-  flex-basis: 300px;
-  display: flex;
-  flex-flow: column wrap;
-}
-.s4_item2 i {
-  margin-bottom: 1rem;
-  font-size: 3rem;
-}
-.s4_item3 {
-  flex-basis: 300px;
-  display: flex;
-  flex-flow: column wrap;
-}
-.s4_item3 i {
-  margin-bottom: 1rem;
-  font-size: 3rem;
+  font-size: 1.5rem;
+  font-family: monospace;
 }
 
 @media only screen and (max-width: 450px) {
