--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,79 +1,99 @@
 .header {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-  }
-  .container {
-    width: 100%;
-    display: flex;
-    flex-flow: row-reverse wrap;
-    justify-content: center;
-    align-items: center;
-  }
+  width: 100%;
+  padding: 2rem 0 1rem 0;
+}
+.container {
+  width: 100%;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+.logoA {
+  color: #000;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.logoA h1 {
+  font-size: 2rem;
+}
+
+.line {
+  width: 60%;
+  border-top: 1px solid rgba(0, 0, 0, 0.418);
+}
+
+.navbar {
+  /*background-color: rgba(0, 0, 0, 0.9);*/
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  gap: 3rem;
+}
+.item {
+}
+/* From uiverse.io by @WhiteNervosa */
+.item a {
+  font-size: 18px;
+  color: #000000; /* #e1e1e1 */
+  text-decoration: none;
+  font-family: inherit;
+  font-weight: 500;
+  cursor: pointer;
+  position: relative;
+  border: none;
+  background: none;
+  text-transform: none;
+  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition-duration: 400ms;
+  transition-property: color;
+}
+.item a:focus,
+.item a:hover {
+  color: #585858;
+}
+.item a:focus:after,
+.item a:hover:after {
+  width: 100%;
+  left: 0%;
+}
+.item a:after {
+  content: "";
+  pointer-events: none;
+  bottom: -2px;
+  left: 50%;
+  position: absolute;
+  width: 0%;
+  height: 2px;
+  background-color: #fff;
+  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition-duration: 400ms;
+  transition-property: width, left;
+}
+.item a:active {
+  transform: scale(0.5);
+  transition: transform 0.8s ease-in-out;
+}
+.item a i {
+  margin-right: 0.5rem;
+  font-size: 1.2rem;
+}
+
+@media (prefers-color-scheme: dark) {
   .logo {
-    margin: 1rem 1rem 0 0;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .container {
+    gap: 1rem;
   }
   .navbar {
-    width: 1000px;
-    border-radius: 25px;
-    display: flex;
-    justify-content: center;
-    gap: 3rem;
+    display: none;
   }
-  .item {
-  }
-  /* From uiverse.io by @WhiteNervosa */
-  .item a {
-    font-size: 18px;
-    color: #fff;/* #e1e1e1 */
-    text-decoration: none;
-    font-family: inherit;
-    font-weight: 800;
-    cursor: pointer;
-    position: relative;
-    border: none;
-    background: none;
-    text-transform: uppercase;
-    transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
-    transition-duration: 400ms;
-    transition-property: color;
-  }
-  .item a:focus,
-  .item a:hover {
-    color: #fff;
-  }
-  .item a:focus:after,
-  .item a:hover:after {
-    width: 100%;
-    left: 0%;
-  }
-  .item a:after {
-    content: "";
-    pointer-events: none;
-    bottom: -2px;
-    left: 50%;
-    position: absolute;
-    width: 0%;
-    height: 2px;
-    background-color: #fff;
-    transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
-    transition-duration: 400ms;
-    transition-property: width, left;
-  }
-  .item a:active {
-    transform: scale(0.5);
-    transition: transform 0.8s ease-in-out;
-  }
-  .item a i {
-    margin-right: 0.5rem;
-    font-size: 1.2rem;
-  }
-
-  @media only screen and (max-width: 500px) {
-    .container {
-      gap: 1rem;
-    }
-    .navbar {
-      display: none;
-    }
-  }
+}
