--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -2,6 +2,7 @@
   width: 100%;
   padding: 2rem 0 1rem 0;
 }
+
 .container {
   width: 100%;
   display: flex;
@@ -10,6 +11,7 @@
   align-items: center;
   gap: 1rem;
 }
+
 .logoA {
   color: #000;
   display: flex;
@@ -35,12 +37,20 @@
   justify-content: center;
   gap: 3rem;
 }
+
+.group {
+  margin-bottom: 0.5rem;
+  margin-right: 0.3rem;
+}
+
 .item {
 }
+
 /* From uiverse.io by @WhiteNervosa */
 .item a {
   font-size: 18px;
-  color: #000000; /* #e1e1e1 */
+  color: #000000;
+  /* #e1e1e1 */
   text-decoration: none;
   font-family: inherit;
   font-weight: 500;
@@ -53,15 +63,18 @@
   transition-duration: 400ms;
   transition-property: color;
 }
+
 .item a:focus,
 .item a:hover {
   color: #585858;
 }
+
 .item a:focus:after,
 .item a:hover:after {
   width: 100%;
   left: 0%;
 }
+
 .item a:after {
   content: "";
   pointer-events: none;
@@ -75,24 +88,26 @@
   transition-duration: 400ms;
   transition-property: width, left;
 }
+
 .item a:active {
   transform: scale(0.5);
   transition: transform 0.8s ease-in-out;
 }
+
 .item a i {
   margin-right: 0.5rem;
   font-size: 1.2rem;
 }
 
 @media (prefers-color-scheme: dark) {
-  .logo {
-  }
+  .logo {}
 }
 
 @media only screen and (max-width: 500px) {
   .container {
     gap: 1rem;
   }
+
   .navbar {
     display: none;
   }
