--- a/styles/Haceres.module.css
+++ b/styles/Haceres.module.css
@@ -173,7 +173,6 @@
   padding: 3rem 6rem 0 6rem;
   display: flex;
   flex-flow: row wrap;
-  gap: 2rem;
 }
 
 .trayectoria h2 {
@@ -196,6 +195,7 @@
 .row1 .evento1 {
   background-color: blue;
   width: 20rem;
+  height: 39rem;
 }
 
 .row1 .evento1 p {
@@ -215,14 +215,15 @@
 
 .imgEvento2 {
   position: absolute;
-  right: 28rem;
-  margin-top: 9rem;
+  right: 31rem;
+  margin-top: 17rem;
 }
 
 .row1 .textEvento2 {
   background-color: aqua;
   width: 20rem;
   padding-top: 2rem;
+  margin-right: 3rem;
   display: flex;
   flex-flow: column wrap;
   align-items: flex-start;
@@ -243,19 +244,34 @@
 .row2 .evento1 {
   background-color: blue;
   width: 20rem;
+  height: 39rem;
+  margin-top: 5rem;
 }
 
 .row2 .evento1 p {
   margin-top: 2rem;
 }
 
-/* EVENTO 1 */
+/* EVENTO 2 */
 .row2 .evento2 {
-  background-color: blue;
+  background-color: rgb(0, 255, 13);
   width: 20rem;
+  height: 44rem;
 }
 
 .row2 .evento2 p {
+  margin-top: 2rem;
+}
+
+/* EVENTO 3 */
+.row2 .evento3 {
+  background-color: blue;
+  width: 20rem;
+  height: 39rem;
+  margin-top: 5rem;
+}
+
+.row2 .evento3 p {
   margin-top: 2rem;
 }
 
@@ -271,9 +287,24 @@
 /* EVENTO 1 */
 .row3 .evento1 {
   background-color: blue;
-  width: 40rem;
-  height: 20rem;
+  width: 45rem;
+  height: 25rem;
+  margin-top: 4rem;
   border: 3px solid #000;
+}
+
+
+
+/* EVENTO 2 */
+.row3 .evento2 {
+  background-color: blue;
+  width: 20rem;
+  height: 39rem;
+  margin-top: 2rem;
+}
+
+.row3 .evento3 p {
+  margin-top: 2rem;
 }
 
 /* BUTTON */
