--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -114,7 +114,12 @@
 }
 
 .texto h2 {
-  font-size: 4rem;
+  font-size: 3rem;
+}
+
+.victor {
+  width: 100%;
+  text-align: end;
 }
 
 /* SECTION 3 */
