--- a/styles/Haceres.module.css
+++ b/styles/Haceres.module.css
@@ -1,5 +1,5 @@
 .body {
-  background-image: linear-gradient(45deg, #96e6a1 0%, #ffffff 100%);
+  background-image: linear-gradient(45deg, #acacac 0%, #ffffff 100%);
 }
 /* SECTION 1 */
 .section1 {
