--- a/styles/Quien.module.css
+++ b/styles/Quien.module.css
@@ -1,5 +1,5 @@
 .body {
-  background-image: linear-gradient(45deg, #96e6a1 0%, #ffffff 100%);
+  background-image: linear-gradient(45deg, #acacac 0%, #ffffff 100%);
 }
 .section1 {
   height: 550px;
@@ -137,6 +137,7 @@
 .description {
   display: flex;
   flex-flow: row wrap;
+  text-align: justify;
 }
 
 .description p {
