--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,5 @@
 .body {
-   /*background-image: linear-gradient(45deg, #acacac 0%, #ffffff 100%);*/
-   background-color: red;
+  background-image: linear-gradient(45deg, #acacac 0%, #ffffff 100%);
 }
 /* SECTION 1 */
 .section1 {
@@ -55,6 +54,38 @@
   overflow: hidden;
 }
 
+/* SECTION MINI 1 */
+.sectionMini1:before {
+  content: "";
+  width: 100%;
+  height: 550px;
+  position: absolute;
+  background-image: radial-gradient(
+    circle,
+    rgba(0, 0, 0, 0.726) 35%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  z-index: 1;
+}
+
+.imgSM1 {
+  z-index: 0;
+}
+
+.textSM1 {
+  color: rgb(255, 255, 255);
+  width: 50%;
+  margin-top: 8rem;
+  text-align: center;
+  position: absolute;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 10rem;
+  z-index: 1;
+}
+
 @keyframes typing {
   from {
     width: 0;
@@ -92,6 +123,11 @@
 }
 .text1_a1_s1 a:active {
   transform: translateY(-1px);
+}
+
+/* SECTION MINI 1 */
+.sectionMini1 {
+  display: none;
 }
 
 /* SECTION 2 */
@@ -177,30 +213,18 @@
 
 @media only screen and (max-width: 450px) {
   .section1 {
-    height: 550px;
-    margin: 1rem 0 0 0;
+    display: none;
+  }
+
+  .sectionMini1 {
+    margin: 0rem 0 0 0;
     display: flex;
-    flex-basis: 100%;
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
     z-index: 1;
   }
-  .section1:before {
-    content: "";
-    width: 100%;
-    height: 550px;
-    position: absolute;
-    background-image: radial-gradient(
-      circle,
-      rgba(0, 0, 0, 0.726) 35%,
-      rgba(0, 0, 0, 0) 100%
-    );
-    z-index: 1;
-  }
-  .text1_a1_s1 {
-    display: none;
-  }
+
   /*.article1_s2 {
     width: 80%;
     gap: 1rem;
