--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -54,6 +54,33 @@
   overflow: hidden;
 }
 
+/* From uiverse.io */
+.text1_a1_s1 a {
+  padding: 1.3em 3em;
+  font-size: 12px;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: #fff;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0px 8px 15px rgba(255, 255, 255, 0.116);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+}
+.text1_a1_s1 a:hover {
+  background-color: #fff;
+  box-shadow: 0px 15px 20px rgba(255, 255, 255, 0.116);
+  color: #000;
+  transform: translateY(-7px);
+}
+.text1_a1_s1 a:active {
+  transform: translateY(-1px);
+}
+
 /* SECTION MINI 1 */
 .sectionMini1:before {
   content: "";
@@ -86,6 +113,23 @@
   z-index: 1;
 }
 
+.textSM1 h1 {
+  font-size: 4rem;
+}
+.textSM1 p {
+  background-color: black;
+  width: 10rem;
+  font-size: 1.5rem;
+  display: block;
+  font-family: monospace;
+  white-space: nowrap;
+  border-right: 4px solid;
+  width: 49ch;
+
+  animation: typing 2s steps(12), blink 0.5s infinite step-end alternate;
+  overflow: hidden;
+}
+
 @keyframes typing {
   from {
     width: 0;
@@ -98,8 +142,9 @@
   }
 }
 
+/* SECTION MINI 1 */
 /* From uiverse.io */
-.text1_a1_s1 a {
+.textSM1 a {
   padding: 1.3em 3em;
   font-size: 12px;
   text-decoration: none;
@@ -115,13 +160,13 @@
   cursor: pointer;
   outline: none;
 }
-.text1_a1_s1 a:hover {
+.textSM1 a:hover {
   background-color: #fff;
   box-shadow: 0px 15px 20px rgba(255, 255, 255, 0.116);
   color: #000;
   transform: translateY(-7px);
 }
-.text1_a1_s1 a:active {
+.textSM1 a:active {
   transform: translateY(-1px);
 }
 
