--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -14,6 +14,8 @@
 
 .logoA {
   color: #000;
+  text-align: center;
+  margin: 0 1rem 0 1rem;
   display: flex;
   flex-flow: column wrap;
   justify-content: center;
@@ -42,8 +44,6 @@
   margin-bottom: 0rem;
   margin-right: 0.3rem;
 }
-
-
 
 .item {
 }
@@ -113,5 +113,11 @@
 
   .navbar {
     display: none;
+  }
+
+  .line {
+    width: 85%;
+    margin-top: -1rem;
+    border-top: 1px solid rgba(0, 0, 0, 0.418);
   }
 }
