--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -84,7 +84,7 @@
 /* SECTION MINI 1 */
 .sectionMini1:before {
   content: "";
-  width: 100%;
+  width: 450px;
   height: 550px;
   position: absolute;
   background-image: radial-gradient(
@@ -256,6 +256,10 @@
   font-family: monospace;
 }
 
+.sectionMini3 {
+  display: none;
+}
+
 @media only screen and (max-width: 450px) {
   .section1 {
     display: none;
@@ -270,20 +274,43 @@
     z-index: 1;
   }
 
-  /*.article1_s2 {
-    width: 80%;
-    gap: 1rem;
+  .maquinaDeEscribir {
+    color: #fff;
+    width: 70%;
+    margin-top: 4rem;
+    text-align: center;
+    font-size: 2rem;
+    position: absolute;
+    z-index: 1;
   }
-  .article2_s2 {
-    width: 80%;
-    gap: 1rem;
+
+  .section2 {
+    padding: 8rem 3rem 8rem 3rem;
   }
+
+  .portada {
+    margin-top: 3rem;
+  }
+
+  .section3 {
+    display: none;
+  }
+
+  .sectionMini3 {
+    height: 525px;
+    margin: 0rem 0 0 0;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+  }
+
   .text1_a1_s3 {
-    width: 340px;
-    right: 2rem;
+    color: #000;
+    width: 400px;
+    height: 70%;
+    margin-left: 0rem;
+    margin-bottom: 0rem;
   }
-  .text1_a2_s3 {
-    width: 340px;
-    right: 2rem;
-  }*/
 }
