--- a/styles/Contacto.module.css
+++ b/styles/Contacto.module.css
@@ -4,13 +4,11 @@
 
 /* SECTION 1 */
 .section1 {
-  padding-top: 4rem;
-  padding-bottom: 7rem;
+  padding-top: 2rem;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
-  gap: 5rem;
 }
 .imageS1 {
 }
@@ -37,19 +35,21 @@
 /* From uiverse.io by @adamgiebl */
 .buttontest {
   text-decoration: none;
+  position: absolute;
+  top: 31.7rem;
+  right: 13rem;
 }
 .buttonS1 {
   font-family: inherit;
   font-size: 20px;
   text-decoration: none;
-  background: #fff;
   color: #000;
-  padding: 0.7em 1em;
+  padding: 1.5em 1.1em;
   padding-left: 0.9em;
   display: flex;
   align-items: center;
   border: none;
-  border-radius: 16px;
+  border-radius: 50%;
   overflow: hidden;
   transition: all 0.2s;
 }
