--- a/styles/Haceres.module.css
+++ b/styles/Haceres.module.css
@@ -57,8 +57,11 @@
 
 /* SECTION 2 */
 .publicaciones {
-  padding: 6rem 6rem 6rem 6rem;
+  padding: 6rem 6rem 0 6rem;
   width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  gap: 2rem;
 }
 
 .publicaciones h2 {
@@ -67,7 +70,6 @@
 
 .container {
   width: 100%;
-  margin-top: 6rem;
   display: flex;
   flex-flow: row wrap;
   align-items: center;
