--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -36,13 +36,50 @@
   flex-flow: column wrap;
   align-items: center;
   justify-content: center;
-  gap: 10rem;
   z-index: 1;
 }
-.text1_a1_s1 h1 {
+
+.button {
+  position: static;
+  margin-top: -10.7rem;
+  margin-left: -74.5rem;
+}
+
+.button2 {
+  position: static;
+  margin-top: -5.3rem;
+  margin-right: -73rem;
+}
+
+.buttons a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 3.2rem;
+  padding: 0.2rem 1.5rem;
+  border-radius: 50%;
+}
+
+.buttons a:hover {
+  color: #000;
+  transform: translateY(-7px);
+}
+
+.buttons a:active {
+  transform: translateY(-1px);
+}
+
+.container {
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 10rem;
+}
+
+.container h1 {
   font-size: 4rem;
 }
-.text1_a1_s1 p {
+.container p {
   font-size: 1.5rem;
   display: block;
   font-family: monospace;
@@ -55,7 +92,7 @@
 }
 
 /* From uiverse.io */
-.text1_a1_s1 a {
+.container a {
   padding: 1.3em 3em;
   font-size: 12px;
   text-decoration: none;
@@ -71,15 +108,16 @@
   cursor: pointer;
   outline: none;
 }
-.text1_a1_s1 a:hover {
+.container a:hover {
   background-color: #fff;
   box-shadow: 0px 15px 20px rgba(255, 255, 255, 0.116);
   color: #000;
   transform: translateY(-7px);
 }
-.text1_a1_s1 a:active {
+.container a:active {
   transform: translateY(-1px);
 }
+
 
 /* SECTION MINI 1 */
 .sectionMini1:before {
