--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -33,8 +33,7 @@
 }
 
 .navbar {
-  /*background-color: rgba(0, 0, 0, 0.9);*/
-  width: 60%;
+  width: 70%;
   display: flex;
   justify-content: center;
   gap: 3rem;
@@ -85,7 +84,7 @@
   position: absolute;
   width: 0%;
   height: 2px;
-  background-color: #fff;
+  background-color: #000;
   transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
   transition-duration: 400ms;
   transition-property: width, left;
