--- a/styles/Quien.module.css
+++ b/styles/Quien.module.css
@@ -105,7 +105,7 @@
 
 /* SECTION 2 */
 .section2 {
-  padding: 6rem 6rem 6rem 6rem;
+  padding: 4rem 6rem 6rem 6rem;
   display: flex;
   flex-flow: column wrap;
   align-items: center;
@@ -113,8 +113,53 @@
   gap: 2rem;
 }
 
+/* TIMELAPSE */
+.timelapse {
+  display: flex;
+  flex-flow: column wrap;
+}
+
+.date {
+  position: absolute;
+  left: 24.2rem;
+  margin: -1.5rem 0 0 0;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  font-size: 0.8rem;
+}
+
+.date p {
+  margin: 0 0 0 0;
+  padding: 0 2.1rem 0 0.5rem;
+}
+
+.buttons {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.buttons a {
+  background-color: red;
+  color: #DADADA;
+  text-decoration: none;
+  text-align: center;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+}
+
+.line {
+  background-color: red;
+  width: 3rem;
+  height: 0.2rem;
+}
+
 .title{
   width: 100%;
+  margin-top: 2rem;
   display: flex;
   flex-flow: column wrap;
   justify-content: space-between;
