--- a/styles/Haceres.module.css
+++ b/styles/Haceres.module.css
@@ -78,7 +78,7 @@
 }
 
 .libro1 {
-  width: 25rem;
+  width: 30rem;
   display: flex;
   flex-flow: column wrap;
   align-items: center;
@@ -98,6 +98,7 @@
 /* COMENTARIOS */
 .comentarios {
   width: 35rem;
+  
   display: flex;
   flex-flow: row wrap;
   align-items: start;
@@ -111,6 +112,7 @@
   padding: 1rem;
   border: none;
   border-radius: 1rem;
+  text-transform: uppercase;
 }
 .comentario:hover {
   box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
@@ -124,6 +126,7 @@
   padding: 1rem;
   border: none;
   border-radius: 1rem;
+  text-transform: uppercase;
 }
 .comentario2:hover {
   box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
@@ -137,6 +140,7 @@
   padding: 1rem;
   border: none;
   border-radius: 1rem;
+  text-transform: uppercase;
 }
 .comentario3:hover {
   box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
@@ -151,6 +155,7 @@
   padding: 1rem;
   border: none;
   border-radius: 1rem;
+  text-transform: uppercase;
 }
 .comentario4:hover {
   box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
