--- a/styles/TallerCultura.module.css
+++ b/styles/TallerCultura.module.css
@@ -67,15 +67,28 @@
 /* SECTION 2 */
 .section2 {
   width: 100%;
-  padding: 2rem 6rem 6rem 6rem;
+  padding: 2rem 0;
+}
+
+.section2 h3 {
+  width: 100%;
+  font-size: 2.5rem;
+  padding: 0 0 1rem 0;
+  text-align: center;
+}
+
+/* SECTION 3 */
+.section3 {
+  width: 100%;
+  padding: 6rem 6rem 6rem 6rem;
   display: flex;
   flex-direction: row wrap;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 
 .carrusel2 {
-  width: 30rem;
+  width: 50rem;
   height: 30rem;
 }
 
