--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -28,84 +28,34 @@
 }
 .text1_a1_s1 {
   color: rgb(255, 255, 255);
-  width: 50%;
+  width: 50rem;
   margin-top: 0rem;
   text-align: center;
   position: absolute;
   display: flex;
-  flex-flow: column wrap;
+  flex-flow: row wrap;
   align-items: center;
   justify-content: center;
   z-index: 1;
 }
 
-.button {
-  position: absolute;
-  top: 0.7rem;
-  margin-left: -40.3rem;
+.buttons {
+  width: 100%;
+  margin-top: 11rem;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+
+.button1 {
+  width: 25rem;
 }
 
 .button2 {
-  position: relative;
-  top: 0.8rem;
-  margin-right: -75.6rem;
+  width: 20rem;
 }
 
-.button3 {
-  position: relative;
-  top: 13.5rem;
-  margin-right: -73.2rem;
-}
-
-.button4 {
-  position: relative;
-  top: 9rem;
-  margin-left: -63.9rem;
-}
-
-.buttons a {
-  color: #fff;
-  text-decoration: none;
-  font-size: 3.2rem;
-  padding: 0.2rem 1.5rem;
-  border-radius: 50%;
-}
-
-.buttons a:hover {
-  color: #fff;
-  background-color: #00000062;
-  transform: translateY(-7px);
-}
-
-.buttons a:active {
-  transform: translateY(-1px);
-}
-
-.container {
-  display: flex;
-  flex-flow: column wrap;
-  align-items: center;
-  justify-content: center;
-  gap: 10rem;
-}
-
-.container h1 {
-  font-size: 4rem;
-}
-.container p {
-  font-size: 1.5rem;
-  display: block;
-  font-family: monospace;
-  white-space: nowrap;
-  border-right: 4px solid;
-  width: 49ch;
-
-  animation: typing 2s steps(12), blink 0.5s infinite step-end alternate;
-  overflow: hidden;
-}
-
-/* From uiverse.io */
-.container a {
+.button1 a {
   padding: 1.3em 3em;
   font-size: 12px;
   text-decoration: none;
@@ -121,15 +71,80 @@
   cursor: pointer;
   outline: none;
 }
-.container a:hover {
+
+.button1 a:hover {
   background-color: #fff;
   box-shadow: 0px 15px 20px rgba(255, 255, 255, 0.116);
   color: #000;
   transform: translateY(-7px);
 }
-.container a:active {
+
+
+.button2 a {
+  padding: 1.3em 3em;
+  font-size: 12px;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: #fff;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0px 8px 15px rgba(255, 255, 255, 0.116);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+}
+
+.button2 a:hover {
+  background-color: #fff;
+  box-shadow: 0px 15px 20px rgba(255, 255, 255, 0.116);
+  color: #000;
+  transform: translateY(-7px);
+}
+
+.button2 a:active {
   transform: translateY(-1px);
 }
+
+.container {
+  width: 50rem;
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+
+.container h1 {
+  font-size: 4rem;
+}
+.p1 {
+  font-size: 1.5rem;
+  display: block;
+  font-family: monospace;
+  white-space: nowrap;
+  border-right: 4px solid;
+  width: 49ch;
+
+  animation: typing 2s steps(12), blink 0.5s infinite step-end alternate;
+  overflow: hidden;
+}
+
+.p2 {
+  color: rgb(39, 255, 39);
+  font-size: 1.5rem;
+  display: block;
+  font-family: monospace;
+  white-space: nowrap;
+  border-right: 4px solid;
+  width: 49ch;
+
+  animation: typing 2s steps(12), blink 0.5s infinite step-end alternate;
+  overflow: hidden;
+}
+
 
 
 /* SECTION MINI 1 */
@@ -234,26 +249,60 @@
   flex-flow: row wrap;
   justify-content: space-around;
   align-items: center;
+  gap: 6rem;
+}
+
+.libro1 {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
 }
 
 .texto {
   color: #000;
-  width: 45rem;
+  width: 50rem;
   display: flex;
-  flex-flow: column wrap;
+  flex-flow: row wrap;
   justify-content: space-around;
-  align-items: start;
-  gap: 2rem;
 }
 
 .texto h2 {
+  width: 100%;
   font-size: 3rem;
 }
 
-.victor {
+.autor {
   width: 100%;
   text-align: end;
 }
+
+.libro2 {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+}
+
+.texto2 {
+  color: #000;
+  width: 50rem;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+}
+
+.texto2 h2 {
+  width: 100%;
+  font-size: 3rem;
+  text-align: start;
+}
+
+.autor2 {
+  width: 100%;
+  text-align: start;
+}
+
 
 /* SECTION 3 */
 .section3 {
@@ -289,7 +338,7 @@
   width: 100%;
   height: 86%;
   margin-left: 2rem;
-  margin-bottom: 8rem;
+  margin-bottom: 14rem;
   color: rgb(255, 255, 255);
   text-align: center;
   position: absolute;
@@ -299,9 +348,6 @@
   align-items: flex-end;
   z-index: 1;
 }
-.text1_a1_s3 h1 {
-  font-size: 4rem;
-}
 .text1_a1_s3 p {
   font-size: 1.5rem;
   font-family: monospace;
@@ -309,6 +355,12 @@
 
 .sectionMini3 {
   display: none;
+}
+
+@media only screen and (max-width: 800px) {
+  .text1_a1_s3 {
+    color: red;
+  }
 }
 
 @media only screen and (max-width: 450px) {
