--- a/styles/ScrollUp.module.css
+++ b/styles/ScrollUp.module.css
@@ -1,45 +1,44 @@
 /* SCROLLUP */
 .scrollUp {
-    background-color: #000;
-    box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.4);
-    width: 3rem;
-    height: 3rem;
-    margin: 0;
-    padding: 0;
-    border: none;
-    border-radius: 50%;
-    position: fixed;
-    top: 0.5rem;
-    right: 3rem;
-    z-index: 2;
-    /* ANIMATION */
-    animation: PopUp 1s forwards;
+  background-color: #000;
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.4);
+  width: 3rem;
+  height: 3rem;
+  margin: 0;
+  padding: 0;
+  border: none;
+  border-radius: 50%;
+  position: fixed;
+  bottom: 2rem;
+  right: 1.5rem;
+  z-index: 2;
+  /* ANIMATION */
+  animation: PopUp 1s forwards;
+}
+
+@keyframes PopUp {
+  0% {
+    transform: translateY(70%);
   }
-  
-  @keyframes PopUp {
-    0% {
-      transform: translateY(0);
-    }
-    100% {
-      transform: translateY(70%);
-    }
+  100% {
+    transform: translateY(0);
   }
-  .scrollUp:hover {
-      transform: scale(1.1);
-      transition: all 0.5s ease;
-    }
-  .scrollUp:active {
-    box-shadow: 0px 15px 20px rgba(255, 255, 255, 0.4);
-    transform: scale(0.85);
-    transition: all 0.3s ease;
+}
+.scrollUp:hover {
+    transform: scale(1.1);
+    transition: all 0.5s ease;
   }
-  .scrollUp i {
-    color: #fff;
-    padding: 0.5rem;
-    font-size: 2rem;
-    border-radius: 50%;
-  }
-  .scrollUp2 {
-    display: none;
-  }
-  
+.scrollUp:active {
+  box-shadow: 0px 15px 20px rgba(255, 255, 255, 0.4);
+  transform: scale(0.85);
+  transition: all 0.3s ease;
+}
+.scrollUp i {
+  color: #fff;
+  padding: 0.5rem;
+  font-size: 2rem;
+  border-radius: 50%;
+}
+.scrollUp2 {
+  display: none;
+}
