--- a/styles/Andares.module.css
+++ b/styles/Andares.module.css
@@ -1,170 +1,272 @@
 .body {
-    background-image: linear-gradient(45deg, #acacac 0%, #ffffff 100%);
-  }
-  /* SECTION 1 */
-  .section1 {
-    height: 550px;
-    margin: 1rem 0 0 0;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-items: center;
-    z-index: 1;
-  }
-  
-  .section1:before {
-    content: "";
-    width: 100%;
-    height: 550px;
-    position: absolute;
-    /*background: linear-gradient(
+  background-image: linear-gradient(45deg, #acacac 0%, #ffffff 100%);
+}
+/* SECTION 1 */
+.section1 {
+  height: 550px;
+  margin: 1rem 0 0 0;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+}
+
+.section1:before {
+  content: "";
+  width: 100vw;
+  height: 550px;
+  position: absolute;
+  /*background: linear-gradient(
       90deg,
       rgba(0, 0, 0, 0),
       rgba(0, 0, 0, 0.607) 60%
     );*/
-    background-image: radial-gradient(
-      circle,
-      rgba(0, 0, 0, 0.61) 10%,
-      rgba(0, 0, 0, 0) 100%
-    );
-    z-index: 1;
-  }
-  
-  .imageS1 {
-    z-index: 0;
-  }
-  
-  .text1_a1_s1 {
-    color: rgb(255, 255, 255);
-    width: 50%;
-    text-align: center;
-    position: absolute;
-    display: flex;
-    flex-flow: column wrap;
-    align-items: center;
-    justify-content: center;
-    gap: 3rem;
-    z-index: 1;
-  }
-  
-  .text1_a1_s1 h2 {
-    font-size: 4rem;
-  }
-  
-  .text1_a1_s1 p {
-    font-size: 1.5rem;
-  }
-  
-  /* SECTION 3 */
+  background-image: radial-gradient(
+    circle,
+    rgba(0, 0, 0, 0.61) 10%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  z-index: 1;
+}
+
+.imageS1 {
+  width: 100vw;
+  z-index: 0;
+}
+
+.text1_a1_s1 {
+  color: rgb(255, 255, 255);
+  width: 50%;
+  text-align: center;
+  position: absolute;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 3rem;
+  z-index: 1;
+}
+
+.text1_a1_s1 h2 {
+  font-size: 4rem;
+}
+
+.text1_a1_s1 p {
+  font-size: 1.5rem;
+}
+
+/* SECTION 2 */
+.trayectoria {
+  width: 100%;
+  padding: 6rem 6rem 0 6rem;
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.trayectoria h2 {
+  width: 100%;
+  font-size: 2rem;
+  text-align: center;
+}
+
+.row1 {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+/* EVENTO 1 */
+.row1 .evento1 {
+  width: 20rem;
+  height: 39rem;
+}
+
+.row1 .evento1 p {
+  margin-top: 2rem;
+}
+
+/* EVENTO 2 */
+.row1 .evento2 {
+  width: 30rem;
+  margin-top: 5rem;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.imgEvento2 {
+  position: absolute;
+  right: 31rem;
+  margin-top: 17rem;
+}
+
+.row1 .textEvento2 {
+  width: 20rem;
+  padding-top: 2rem;
+  margin-right: 3rem;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 0.5rem;
+}
+
+/* ROW2 */
+.row2 {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+}
+
+/* EVENTO 1 */
+.row2 .evento1 {
+  width: 20rem;
+  height: 39rem;
+  margin-top: 5rem;
+}
+
+.row2 .evento1 p {
+  margin-top: 2rem;
+}
+
+/* EVENTO 2 */
+.row2 .evento2 {
+  width: 20rem;
+  height: 44rem;
+}
+
+.row2 .evento2 p {
+  margin-top: 2rem;
+}
+
+/* EVENTO 3 */
+.row2 .evento3 {
+  width: 20rem;
+  height: 39rem;
+  margin-top: 5rem;
+}
+
+.row2 .evento3 p {
+  margin-top: 2rem;
+}
+
+/* ROW3 */
+.row3 {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+}
+
+/* EVENTO 1 */
+.row3 .evento1 {
+  width: 45rem;
+  height: 30rem;
+  margin-top: 4rem;
+  border: 3px solid #000;
+  display: flex;
+  flex-flow: row wrap;
+  gap: 1rem;
+}
+
+.row3 .evento1 p {
+  width: 100%;
+  text-align: center;
+}
+
+/* EVENTO 2 */
+.row3 .evento2 {
+  width: 20rem;
+  height: 39rem;
+  margin-top: 2rem;
+}
+
+.row3 .evento3 p {
+  margin-top: 2rem;
+}
+
+/* BUTTON */
+.button {
+  font-size: 18px;
+  color: #000;
+  font-weight: 600;
+  cursor: pointer;
+  position: relative;
+  border: none;
+  text-decoration: none;
+  border-bottom: 3px solid #000;
+  background: none;
+  transition: all 0.3s ease 0s;
+}
+
+.button:hover {
+  transform: translateY(-7px);
+  color: #000;
+}
+
+@media only screen and (max-width: 450px) {
   .trayectoria {
     width: 100%;
-    padding: 6rem 6rem 0 6rem;
-    display: flex;
-    flex-flow: row wrap;
+    margin-top: 3rem;
+    padding: 0;
   }
-  
-  .trayectoria h2 {
-    width: 100%;
-    font-size: 2rem;
-    text-align: center;
-  }
-  
   .row1 {
-    width: 100%;
+    width: 100vw;
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-between;
-    align-items: flex-start;
+    justify-content: center;
+    gap: 2rem;
   }
-  
-  /* EVENTO 1 */
   .row1 .evento1 {
-    width: 20rem;
-    height: 39rem;
+    width: 80%;
+
   }
-  
-  .row1 .evento1 p {
-    margin-top: 2rem;
-  }
-  
-  /* EVENTO 2 */
   .row1 .evento2 {
-    width: 30rem;
-    margin-top: 5rem;
+    width: 80%;
+    margin: 0;
     display: flex;
     flex-flow: row wrap;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
   }
-  
   .imgEvento2 {
-    position: absolute;
-    right: 31rem;
-    margin-top: 17rem;
+    position: static;
+    margin: 0;
   }
-  
-  .row1 .textEvento2 {
-    width: 20rem;
-    padding-top: 2rem;
-    margin-right: 3rem;
-    display: flex;
-    flex-flow: column wrap;
-    align-items: flex-start;
-    justify-content: center;
-    gap: 0.5rem;
-  }
-  
-  /* ROW2 */
+
   .row2 {
-    width: 100%;
+    width: 100vw;
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 2rem;
   }
-  
-  /* EVENTO 1 */
   .row2 .evento1 {
-    width: 20rem;
-    height: 39rem;
-    margin-top: 5rem;
+    width: 80%;
   }
-  
-  .row2 .evento1 p {
-    margin-top: 2rem;
-  }
-  
-  /* EVENTO 2 */
   .row2 .evento2 {
-    width: 20rem;
-    height: 44rem;
+    width: 80%;
   }
-  
-  .row2 .evento2 p {
-    margin-top: 2rem;
-  }
-  
-  /* EVENTO 3 */
   .row2 .evento3 {
-    width: 20rem;
-    height: 39rem;
-    margin-top: 5rem;
+    width: 80%;
   }
-  
-  .row2 .evento3 p {
-    margin-top: 2rem;
-  }
-  
+
+
   /* ROW3 */
   .row3 {
     width: 100%;
     display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
+    flex-flow: column wrap;
+    align-items: center;
+    gap: 6rem;
   }
-  
-  /* EVENTO 1 */
   .row3 .evento1 {
-    width: 45rem;
+    width: 85%;
     height: 30rem;
     margin-top: 4rem;
     border: 3px solid #000;
@@ -172,88 +274,4 @@
     flex-flow: row wrap;
     gap: 1rem;
   }
-  
-  .row3 .evento1 p {
-    width: 100%;
-    text-align: center;
-  }
-  
-  /* EVENTO 2 */
-  .row3 .evento2 {
-    width: 20rem;
-    height: 39rem;
-    margin-top: 2rem;
-  }
-  
-  .row3 .evento3 p {
-    margin-top: 2rem;
-  }
-  
-  /* BUTTON */
-  .button {
-    font-size: 18px;
-    color: #000;
-    font-weight: 600;
-    cursor: pointer;
-    position: relative;
-    border: none;
-    text-decoration: none;
-    border-bottom: 3px solid #000;
-    background: none;
-    transition: all 0.3s ease 0s;
-  }
-  
-  .button:hover {
-    transform: translateY(-7px);
-    color: #000;
-  }
-  
-  
-  
-  @media only screen and (max-width: 450px) {
-    .section2 {
-      width: 100%;
-      color: #fff;
-      height: 800px;
-      margin: 0rem 0;
-      display: flex;
-      flex-flow: row wrap;
-      justify-content: center;
-      align-items: center;
-    }
-    .section2:before {
-      content: "";
-      width: 100%;
-      height: 800px;
-      position: absolute;
-      background: linear-gradient(90deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
-      z-index: 1;
-    }
-    .text1_a1_s2 {
-      width: 80%;
-      text-align: center;
-      position: absolute;
-      top: 86rem;
-      left: 2.5rem;
-      display: flex;
-      flex-flow: column wrap;
-      gap: 0.5rem;
-      z-index: 1;
-    }
-    .text1_a2_s2 {
-      width: 80%;
-      text-align: center;
-      position: absolute;
-      top: 110rem;
-      left: 2.5rem;
-      display: flex;
-      flex-flow: column wrap;
-      gap: 0.5rem;
-      z-index: 1;
-    }
-    .backgroundS2 {
-      width: 100%;
-      height: 800px;
-    }
-  }
-  
+}
