--- a/styles/Carrusel.module.css
+++ b/styles/Carrusel.module.css
@@ -18,3 +18,10 @@
   width: 45rem;
   height: 30rem;
 }
+
+@media only screen and (max-width: 450px) {
+  .img {
+    width: 24rem;
+    height: 30rem;
+  }
+}
