--- a/styles/Haceres.module.css
+++ b/styles/Haceres.module.css
@@ -85,10 +85,9 @@
 /* COMENTARIOS */
 .comentarios {
   width: 35rem;
-  
   display: flex;
   flex-flow: row wrap;
-  align-items: start;
+  align-items: flex-start;
   gap: 2rem;
 }
 
@@ -150,10 +149,6 @@
   transition: all 0.5s ease;
 }
 
-.cart2 {
-  display: none;
-}
-
 .publi {
   
 }
@@ -165,48 +160,116 @@
 
 
 @media only screen and (max-width: 450px) {
-  .section2 {
+  .section1 {
+    height: 100%;
+    margin: 1rem 0 5rem 0;
+    z-index: 1;
+  }
+  .videoBackground video {
+    width: 100vw;
+    object-fit: cover; /* Ensure the video covers the entire container */
+  }
+
+  .publicaciones {
+    padding: 0;
     width: 100%;
-    color: #fff;
-    height: 800px;
-    margin: 0rem 0;
     display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
+    flex-flow: column wrap;
+    gap: 2rem;
+  }
+  
+  .container {
+    width: 80%;
+    display: flex;
+    flex-flow: column wrap;
     align-items: center;
+    justify-content: center;
+    gap: 3rem;
   }
-  .section2:before {
-    content: "";
-    width: 100%;
-    height: 800px;
-    position: absolute;
-    background: linear-gradient(90deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
-    z-index: 1;
-  }
-  .text1_a1_s2 {
-    width: 80%;
-    text-align: center;
-    position: absolute;
-    top: 86rem;
-    left: 2.5rem;
+  
+  .libro1 {
+    width: 25rem;
     display: flex;
     flex-flow: column wrap;
-    gap: 0.5rem;
-    z-index: 1;
+    align-items: center;
+    border-radius: 1rem;
+    gap: 1rem;
   }
-  .text1_a2_s2 {
-    width: 80%;
+  
+  .libro1img {
+    border: 2px solid #000;
+  }
+  
+  .libro1 h3 {
+    font-size: 1.3rem;
     text-align: center;
-    position: absolute;
-    top: 110rem;
-    left: 2.5rem;
+  }
+  
+  /* COMENTARIOS */
+  .comentarios {
+    width: 80%;
     display: flex;
     flex-flow: column wrap;
-    gap: 0.5rem;
-    z-index: 1;
+    align-items: center;
+    gap: 2rem;
   }
-  .backgroundS2 {
-    width: 100%;
-    height: 800px;
+  
+  .comentario {
+    background-color: #fff;
+    width: 10rem;
+    margin-left: 0;
+    padding: 1rem;
+    border: none;
+    border-radius: 1rem;
+    text-transform: uppercase;
   }
+  .comentario:hover {
+    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+    transform: scale(1.1);
+    transition: all 0.5s ease;
+  
+  }
+  .comentario2 {
+    background-color: #fff;
+    width: 15rem;
+    padding: 1rem;
+    border: none;
+    border-radius: 1rem;
+    text-transform: uppercase;
+  }
+  .comentario2:hover {
+    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+    transform: scale(1.1);
+    transition: all 0.5s ease;
+  }
+  
+  .comentario3 {
+    background-color: #fff;
+    width: 15rem;
+    padding: 1rem;
+    border: none;
+    border-radius: 1rem;
+    text-transform: uppercase;
+  }
+  .comentario3:hover {
+    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+    transform: scale(1.1);
+    transition: all 0.5s ease;
+  }
+  
+  .comentario4 {
+    background-color: #fff;
+    width: 15rem;
+    margin-left: 0;
+    padding: 1rem;
+    border: none;
+    border-radius: 1rem;
+    text-transform: uppercase;
+  }
+  .comentario4:hover {
+    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+    transform: scale(1.1);
+    transition: all 0.5s ease;
+  }
+
 }
