--- a/styles/Quien.module.css
+++ b/styles/Quien.module.css
@@ -30,6 +30,7 @@
 }
 
 .imageS1 {
+  width: 100vw;
   z-index: 0;
 }
 
@@ -113,50 +114,6 @@
   gap: 2rem;
 }
 
-/* TIMELAPSE */
-.timelapse {
-  display: flex;
-  flex-flow: column wrap;
-}
-
-.date {
-  position: absolute;
-  left: 20.9rem;
-  margin: -1.5rem 0 0 0;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  font-size: 0.8rem;
-}
-
-.date p {
-  margin: 0 0 0 0;
-  padding: 0 2.5rem 0 0.5rem;
-}
-
-.buttons {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  align-items: center;
-}
-
-.link {
-  background-color: red;
-  color: #DADADA;
-  text-decoration: none;
-  text-align: center;
-  width: 1rem;
-  height: 1rem;
-  border-radius: 50%;
-}
-
-.line {
-  background-color: red;
-  width: 4rem;
-  height: 0.2rem;
-}
-
 .title{
   width: 100%;
   margin-top: 2rem;
@@ -165,13 +122,6 @@
   justify-content: space-between;
   align-items: center;
   gap: 1rem;
-}
-
-.title h3 {
-  width: 100%;
-  font-size: 2rem;
-  text-align: start;
-  font-weight: 500;
 }
 
 .title h2 {
@@ -193,47 +143,12 @@
 
 @media only screen and (max-width: 450px) {
   .section2 {
-    width: 100%;
-    color: #fff;
-    height: 800px;
-    margin: 0rem 0;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-items: center;
+    padding: 0;
   }
-  .section2:before {
-    content: "";
-    width: 100%;
-    height: 800px;
-    position: absolute;
-    background: linear-gradient(90deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
-    z-index: 1;
+  .title{
+    width: 75%;
   }
-  .text1_a1_s2 {
-    width: 80%;
-    text-align: center;
-    position: absolute;
-    top: 86rem;
-    left: 2.5rem;
-    display: flex;
-    flex-flow: column wrap;
-    gap: 0.5rem;
-    z-index: 1;
-  }
-  .text1_a2_s2 {
-    width: 80%;
-    text-align: center;
-    position: absolute;
-    top: 110rem;
-    left: 2.5rem;
-    display: flex;
-    flex-flow: column wrap;
-    gap: 0.5rem;
-    z-index: 1;
-  }
-  .backgroundS2 {
-    width: 100%;
-    height: 800px;
+  .description {
+    width: 75%;
   }
 }
