--- a/styles/TimelineCarousel.module.css
+++ b/styles/TimelineCarousel.module.css
@@ -1,32 +1,56 @@
 .timelineButtons {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 20px;
-  }
-  
-  .timelineButton {
-    background-color: #fff;
-    border: none;
-    padding: 5px 10px;
-    margin: 0 5px;
-    cursor: pointer;
-    border-radius: 50%;
-  }
-  
-  .timelineButton.active {
-    background-color: #ccc;
-  }
-  
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
 
-  /* TimelineCarousel.css */
+.timelineButton {
+  background-color: #fff;
+  border: none;
+  padding: 5px 10px;
+  margin: 0 5px;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.timelineButton.active {
+  background-color: #ccc;
+}
+
+/* TimelineCarousel.css */
 .timelineCarousel {
-    max-width: 1200px; /* Establece un ancho máximo para el carrusel */
+  max-width: 1200px; /* Establece un ancho máximo para el carrusel */
+  margin: 0 auto; /* Centra el carrusel en la página */
+}
+
+.timelineCarousel img {
+  max-width: 350px; /* Ajusta el ancho máximo de las imágenes al tamaño máximo del contenedor */
+  height: 500px; /* Permite que la altura se ajuste proporcionalmente al ancho */
+  margin: 0 50px; /* Agrega un margen horizontal entre las imágenes */
+}
+
+/* Media Query para dispositivos móviles */
+@media only screen and (max-width: 450px) {
+  .timelineCarousel {
+    max-width: 80vw; /* Establece un ancho máximo para el carrusel */
     margin: 0 auto; /* Centra el carrusel en la página */
   }
-  
+  .timelineButtons {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap; /* Permite que los botones se envuelvan en una nueva línea si no hay suficiente espacio */
+    justify-content: space-around; /* Distribuye uniformemente los elementos a lo largo del contenedor */
+    margin-bottom: 20px;
+    gap: 0.2rem;
+  }
+
+  .timelineButton {
+    margin: 5px 0; /* Agrega espacio entre los botones */
+  }
+
   .timelineCarousel img {
-    max-width: 350px; /* Ajusta el ancho máximo de las imágenes al tamaño máximo del contenedor */
-    height: 500px; /* Permite que la altura se ajuste proporcionalmente al ancho */
-    margin: 0 50px; /* Agrega un margen horizontal entre las imágenes */  
+    max-width: 500px;
+    height: 500px;
+    margin: 0;
+  }
 }
-  
