--- a/styles/Quien.module.css
+++ b/styles/Quien.module.css
@@ -13,7 +13,7 @@
 
 .section1:before {
   content: "";
-  width: 100%;
+  width: 100vw;
   height: 550px;
   position: absolute;
   background: linear-gradient(
@@ -114,7 +114,7 @@
   gap: 2rem;
 }
 
-.title{
+.title {
   width: 100%;
   margin-top: 2rem;
   display: flex;
@@ -140,12 +140,25 @@
   align-items: center;
 }
 
-
 @media only screen and (max-width: 450px) {
+  .section1 {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  .text1_a1_s1 {
+    margin: 0;
+    padding: 0 3rem;
+    width: 100vw;
+  }
+  .text1_a1_s1 a {
+    display: none;
+  }
   .section2 {
     padding: 0;
   }
-  .title{
+  .title {
     width: 75%;
   }
   .description {
